--- a/Codenames.css
+++ b/Codenames.css
@@ -121,6 +121,7 @@ background-color: #ddd;
     border-radius: 20px;
     color: white;
     transition: all 300ms;
+    border-radius: 10%;
 }
 
 .team_card_bg {
@@ -129,6 +130,7 @@ background-color: #ddd;
     background-color: #1a1a1a;
     border: radius 20px;
     transition: all .2s;
+    border-radius: 10%;
 }
 
 .team_card_bg:hover {
